fixed overflowing button for products

--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ p.red_btn a {
     font-family: 'Conv_GE_SS_Two_Light';
     font-size: 17px;
     font-weight: normal;
-    width: 250px;
+    width: 260px;
 }
 
 .right_name_pro {
